2015-03-22 Riccardo Mottola <rm@gnu.org>

	* Headers/Protocols/Preferences.h
	* PCPrefController.m
	Direct preferences method for setting and getting colors.

2015-03-22 Riccardo Mottola <rm@gnu.org>

	* Modules/Preferences/EditorFSC/PCEditorFSCPrefs.m
	Convert CMYK to RGB before serializing.

2015-03-22 Riccardo Mottola <rm@gnu.org>

	* Modules/Editors/ProjectCenter/PCEditor.m
	Actually use the background color preference.

2015-03-22 Riccardo Mottola <rm@gnu.org>

	* Headers/Protocols/Preferences.h
	* Modules/Preferences/EditorFSC/PCEditorFSCPrefs.m
	* PCPrefController.m
	Move colorFromString from PCEditorFSCPrefs to PCPrefsController and make it thus generally available.

2015-03-12 Riccardo Mottola <rm@gnu.org>

	* Modules/Projects/Framework/PCFrameworkProject.m
	Generate the PACKAGE_NAME for Frameworks.

2015-03-11 Riccardo Mottola <rm@gnu.org>

	* Modules/Preferences/EditorFSC/PCEditorFSCPrefs.m
	Bug Fix: Set the font manager with the picked font, not always the same.

2015-03-11 Riccardo Mottola <rm@gnu.org>

	* Modules/Preferences/EditorFSC/PCEditorFSCPrefs.h
	* Modules/Preferences/EditorFSC/PCEditorFSCPrefs.m
	* Modules/Preferences/EditorFSC/Resources/EditorFSCPrefs.gorm
	Provide Editor and Fixed font preferences, instead of plain and rich.

	* Modules/Editors/ProjectCenter/PCEditorView.m
	Use the preferences Editor font instead of the system one.

2014-12-16 Riccardo Mottola <rm@gnu.org>

	* Framework/PCProject.m
	Initialize backup wrapper after wrapperPath since it depends on it!

2014-12-16 Riccardo Mottola <rm@gnu.org>

	* Framework/PCMakefileFactory.m
	Generate sections only if there are classes.

2014-12-15 Riccardo Mottola <rm@gnu.org>

	* Framework/PCMakefileFactory.m
	Create mm sections in makefiles for Objective-C++

2014-12-08 Riccardo Mottola <rm@gnu.org>

	* Framework/PCProject.m
	Accept also Objective-C++ classes as Class files

2014-11-20 Riccardo Mottola <rm@gnu.org>

	* Modules/Parsers/ProjectCenter/PCParser.m